# jarvis-mcp-server

./: .env.example  README.md  pyproject.toml
jarvis_mcp/: __init__.py  __main__.py  bridge.py  config.py  server.py
jarvis_mcp/tools/: __init__.py  autonomy.py  chat.py  memory.py  runtime.py
