[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-mcp-server"
version = "0.1.0"
description = "MCP server bridging external clients (VS Code, Claude Desktop, etc.) to the JARVIS core API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0",
]

[project.scripts]
jarvis-mcp = "jarvis_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["jarvis_mcp"]
